# BinancePlusPlus

./: .gitignore  README.md
Binance++/: CMakeLists.txt
Binance++/#in/Lib/Windows/x64-Debug/: libcurl_imp.lib
Binance++/#in/Lib/Windows/x86-Debug/: libcurl_imp.lib
Binance++/Binance++/: Binance++.cpp  CMakeLists.txt
Binance++/Binance++/src/: Binance++.cpp  Binance++.h
Binance++/Binance++/src/Internal/: BinanceErr.h  Query.h  Utils.cpp  Utils.h
Binance++/DevTest/: CMakeLists.txt
Binance++/DevTest/src/: MA.h  MACD.h  Main.cpp
